--- a/gb/24/3/8/n14197360.md
+++ b/gb/24/3/8/n14197360.md
@@ -1,13 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【未解之谜】来自平行世界的她</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/03/id14197383-8fb8045ee5d0a2d2c67696becb1450f5-600x400.jpg" />
-<h6>惊！真实故事：一女嫁二夫，随意穿梭阴阳两婆家。西班牙女子经历诡异事件：难道自己穿越了？（《未解之谜》提供）
-</h6>
+///image2=
+<h6></h6>
 <hr>
-<p>大家好，我是扶摇。欢迎和我一起探索<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>。</p>
-<p>今天咱们来聊聊时下比较流行的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B9%B3%E8%A1%8C%E4%B8%96%E7%95%8C.md#1">平行世界</a>吧。先来给大家讲个玄幻故事。</p>
+<p>大家好，我是扶摇。欢迎和我一起探索未解之谜。</p>
+<p>今天咱们来聊聊时下比较流行的平行世界吧。先来给大家讲个玄幻故事。</p>
 <h2>阴阳两婆家</h2>
 <p>差不多是在1949年前后吧，那天，一个东北小村庄里发生了一桩奇事。一位新媳妇动不动就昏睡三天，醒来后说她这三天里去了另外一个婆家，在那里她还有一个丈夫。这是怎么回事呢？</p>
 <p>原来这位新媳妇属于很少有的那种开着天眼的人，能看到另外的空间。出嫁那天她坐着花轿一路过来的时候，迷迷糊糊看到另外的空间也有顶花轿，而且更漂亮，于是心里想：“俺要是能坐上那顶花轿就太好了。”谁知，就这么一想，就真的坐到那顶漂亮的花轿上了。然后就稀里糊涂被人抬到了一户人家，跟一位英俊的男子成了亲。</p>
@@ -20,17 +19,17 @@
 <p>她解释说，这是因为两边的时间不一样。那边的时间比这里快。所以她坐上那边的花轿不一会儿就到了那边的丈夫家，在那边拜完堂了，这边的花轿才抬进门。</p>
 <p>她又解释说，身体虽然有两个，但灵魂只有一个。灵魂去主宰那边的身体了，这边的身体就会失去意识，所以她就躺下睡了。这也就是怎么叫都叫不醒她的原因。</p>
 <p>这么慢慢解释吧，丈夫渐渐也明白了一些。虽然心里老大不高兴，但也只好接受事实。话说天下没有不透风的墙，新媳妇嫁了阴阳两个婆家的事还是传了出去。后来这位新媳妇就有了一个外号，叫做阴阳人。</p>
-<p>有时候这位阴阳媳妇跟人聊天的时候会讲起她在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%A6%E5%A4%96%E7%A9%BA%E9%97%B4.md#1">另外空间</a>生的孩子们。听的人就哈哈大笑，说你去一回也就三天，生孩子得怀胎十月，三天怎么生啊？她说：这里是三天，在那里可是好多天咧。大家摇头不信。</p>
+<p>有时候这位阴阳媳妇跟人聊天的时候会讲起她在另外空间生的孩子们。听的人就哈哈大笑，说你去一回也就三天，生孩子得怀胎十月，三天怎么生啊？她说：这里是三天，在那里可是好多天咧。大家摇头不信。</p>
 <p>她又说，那边的生活条件比这边这里好，吃饭用的都是金碗。有一次她就跟那边的丈夫说，想拿几个金碗回来，让这边的家人跟着沾点光，也让村里人都能相信她。</p>
 <p>可那边的丈夫说，不是不给你，你拿不过去的。阴阳媳妇不信，回来的时候就偷偷在怀里揣了几个金碗。没想到一醒来，哪里揣着金碗，哪里就鼓个大包，非常难受。她只好赶紧又回那边把金碗送了回去。这一下使她真的相信了那边的东西再好，也是拿不过来的了，只能在那边享用。所以以后就再不做这种事了。</p>
 <p>当她这么讲的时候，旁边就有人就打趣说，那你就在那边多住几天，多享点福呗。她说不行，如果住多了，超过三天了，这边的身体老不吃饭，缺营养，会受伤的。又有人说：既然那边好，那你就别回来了，在那里住得了。她说不行啊，这边的身体是主体，俺如果不回来了，这边的身体会死的。如果死了，整个安排就不存在了，那边的福也享不上了。</p>
 <p>大家越听越稀罕。这阴阳两婆家的事儿到底是谁安排的？安排的目的又是什么呢？阴阳媳妇就答不上来了。</p>
 <p>转眼十几年过去了，文革来了。红卫兵们知道了这件事就找上了门，说你别再装神弄鬼了，不然我们随时都可以把你拉去游街示众。阴阳媳妇一听就吓坏了，再也不敢去那边了。但她在那边也有个完整的家呀。时间长了，丈夫就来找她来了，死磨硬缠非要她回去。</p>
 <p>阴阳媳妇虽然于心不忍，可也只好咬牙断了跟那边的缘分，狠狠心就跟这边的丈夫说，你把他打走吧。丈夫说，我又看不见他，怎么打？阴阳媳妇说，这边的棒子在那边也是有形的，看不见没关系，我指哪你打哪就行了。丈夫将信将疑，就照着做了。被打过几回后，那边的丈夫彻底绝望了，就再不来了。阴阳媳妇从此就跟那边断了联系。</p>
-<p>故事讲到这里，有人会说，你这故事到底是真是假？不会是编的吧。说故事的人说，是真事儿，是他大姑姐村子里发生的事儿。这位女子我们虽然叫她阴阳媳妇，可她去的那个空间还真不是阴间，你说<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B9%B3%E8%A1%8C%E4%B8%96%E7%95%8C.md#1">平行世界</a>也行，你说<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%A6%E5%A4%96%E7%A9%BA%E9%97%B4.md#1">另外空间</a>也行，但那边的人是真实存在的。</p>
+<p>故事讲到这里，有人会说，你这故事到底是真是假？不会是编的吧。说故事的人说，是真事儿，是他大姑姐村子里发生的事儿。这位女子我们虽然叫她阴阳媳妇，可她去的那个空间还真不是阴间，你说平行世界也行，你说另外空间也行，但那边的人是真实存在的。</p>
 <p>再来给大家讲个国外流传很广的平行世界的故事吧。</p>
-<h2>莱丽娜<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A9%BF%E8%B6%8A.md#1">穿越</a>事件</h2>
-<p>2008年，一位名叫莱丽娜（Lerina García Gordo）的西班牙女子在网上寻求帮助。她说她可能是从另外一个世界<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A9%BF%E8%B6%8A.md#1">穿越</a>过来的。</p>
+<h2>莱丽娜穿越事件</h2>
+<p>2008年，一位名叫莱丽娜（Lerina García Gordo）的西班牙女子在网上寻求帮助。她说她可能是从另外一个世界穿越过来的。</p>
 <p>那天早上起来她发现床单颜色不同了，可因为着急上班，也没细想就匆匆出门去了。车子还是停在老地方，其它一切也都很正常。然而到了公司之后，异常的事情又出现了。她先是在办公大楼见到了几个陌生人，然后发现自己办公室的门口挂着一个陌生人的名牌。</p>
 <p>她一下子就懵了。她在这家公司做了20年了，自己的办公室闭着眼睛都能摸到。这是怎么回事？难道我走错楼层了？可再仔细看看，楼层没错呀，这是自己的办公室也没错，但现在也确实是别人的办公室了。难道我被解雇了？！</p>
 <p>莱丽娜赶紧查看公司网页，却发现自己仍然是公司员工，只是换了个部门，换了个经理。这是怎么回事呢？她头皮开始发麻了。</p>
@@ -38,9 +37,9 @@
 <p>莱丽娜回来越想越不对，就打电话给男朋友求助。男朋友叫做奥古斯丁，他俩已经约会4个月了。没想到电话那边说，你打错了，没有奥古斯丁这个人。</p>
 <p>她吓得两腿发软，胆战心惊地回了家，却发现自己还跟已经分手的前男友住在一起。他们曾经一起度过7年的时光，6个月前才刚刚分手。可现在两人好像什么事情都没发生过一样。</p>
 <p>就这么度过了奇怪的一天，隔天她硬着头皮上班去了，而日子也就平静地过了下去。但她心里却怎么都平静不了，左思右想还是上网发了个帖文寻求帮助，问有没有人跟她有相同的经历，她会不会是从平行世界穿越过来的？</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%96%9B%E5%AE%9A%E8%B0%94%E7%8C%AB.md#1">薛定谔猫</a>和量子纠缠</h2>
+<h2>薛定谔猫和量子纠缠</h2>
 <p>故事讲完了。下面就来讲讲平行世界这个最近挺热门的话题吧。大家有听说过薛定谔的猫和量子纠缠这两个词吧？这两个时髦的名词其实都跟平行世界有关。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%96%9B%E5%AE%9A%E8%B0%94%E7%8C%AB.md#1">薛定谔猫</a>是想像中的实验，也是量子力学中一个最著名的实验。实验的主角是一只猫咪，被关在了一个黑暗的笼子里。盒子里还有一种放射性物质，和一个能放出毒气的小装置。这种放射性物质一小时内衰变的概率是50%。如果发生衰变就会触动装置放出毒气，猫咪就死了。如果不衰变就不会触动装置放出毒气，猫咪就会安然无恙。</p>
+<p>薛定谔猫是想像中的实验，也是量子力学中一个最著名的实验。实验的主角是一只猫咪，被关在了一个黑暗的笼子里。盒子里还有一种放射性物质，和一个能放出毒气的小装置。这种放射性物质一小时内衰变的概率是50%。如果发生衰变就会触动装置放出毒气，猫咪就死了。如果不衰变就不会触动装置放出毒气，猫咪就会安然无恙。</p>
 <p>一小时以后，猫咪是死了还是活着呢？没人知道。科学家说，猫咪这时处于生与死的叠加状态，在量子的世界中，这就叫量子叠加，是量子力学中一个非常基本的概念。</p>
 <p>有人说了，别把简单事情搞复杂了。猫咪是不是活着，咱们打开笼子不就知道了。笼子一打开，你看到的那只猫咪就不再是生死叠加的状态了，两种状态只能剩下一种，不是活着就是死了。科学家把这叫做量子坍缩，从叠加态坍缩到单一状态了。</p>
 <p>那么这只猫咪是怎么跟平行世界扯上关系的呢？科学家认为，我们的世界很可能是多个平行世界叠加的这么一个状态，就像那只黑暗中生死叠加的猫咪。然而当我们看到那只猫咪的时候，我们只能看到猫的一种状态。同样当我们去看这个世界的时候，我们只能看到一个世界，这时，多重平行世界在我们眼前坍缩为单一的世界。</p>
@@ -50,48 +49,49 @@
 <p>大家为什么这么震惊呢？因为这不就说明了心灵感应、遥视这些特异功能可以是真实存在的嘛，我们的世界也不会是孤立存在的，而另外的世界改变也可能影响到我们的世界。当然了，量子纠缠的现像是发生在微观世界中，可宏观世界是由微观粒子组成的呀，是不是呢？</p>
 <p>2022年三位科学家因为“量子纠缠”这个课题获得了诺贝尔物理学奖，之后薛定谔猫和量子纠缠这两个词就在网上开始光速传播，关于平行世界的话题更是火爆到了现在。</p>
 <p>那么如果平行世界真的存在，我们正在跟另外世界许许多多的我进行量子纠缠，那么我们的一举一动，我们的每一个选择或许也正在影响另外许许多多世界里的那个我。这么想想，这个世界是不是很神奇呢？</p>
-<p>好了，今天的故事就讲到这里了。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>，我是扶摇。我们下回见。</p>
-<p>欢迎订阅Youmaker频道：<ahref="https://www.youmaker.com/c/UnsolvedMystery">https://www.youmaker.com/c/UnsolvedMystery</a><br />
+<p>好了，今天的故事就讲到这里了。未解之谜，我是扶摇。我们下回见。<br />
+</p>
+<p><center><center><a title="YouTube video player" src=""></a><a href="https://d324e5bfxb7dri.cloudfront.net/V1nSgGfod"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/u1bPbrPk5wk" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></center></p>
+<p>欢迎订阅Youmaker频道：<ahref=""></a><a href="https://d324e5bfxb7dri.cloudfront.net/V1nSgGfod"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/UnsolvedMystery">"></a><a href="https://d324e5bfxb7dri.cloudfront.net/V1nSgGfod"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/UnsolvedMystery</a><br />
 订阅频道Ganjingworld频道：<ahref="https://www.ganjing.com/zh-TW/channel/1eiqjdnq7go2dgb6zFtQ9TYK11080c">https://www.ganjing.com/zh-TW/channel/1eiqjdnq7go2dgb6zFtQ9TYK11080c</a><br />
-订阅YouTube频道:<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
+订阅YouTube频道:<ahref=""></a><a href="https://d324e5bfxb7dri.cloudfront.net/V1nSgGfod"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">"></a><a href="https://d324e5bfxb7dri.cloudfront.net/V1nSgGfod"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
 订阅未解之谜Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
-<p>【<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ" target="_blank" rel="noopener noreferrer">未解之谜</a>】节目组制作</p>
+<p>【<ahref=""></a><a href="https://d324e5bfxb7dri.cloudfront.net/V1nSgGfod"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ" target="_blank" rel="noopener noreferrer">未解之谜</a>】节目组制作</p>
 <p>责任编辑：李梅#</p>
+<hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119920.md#1">【未解之谜】冥府见闻 真实存在的生死簿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/4/n14087653.md#1">这人做了坏事 为何四世后才遭到报应？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027952.md#1">感觉往生的亲人就在身边？ 专家：正常现象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/13/n13758099.md#1">【未解之谜】通行灵界的科学家之三：地狱之门的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/13/n13229320.md#1">天梯的寓意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/13/n13159812.md#1">西方史上极著名的灵魂归来事件(2) 还阳复生完成任务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/4/n13137545.md#1">西方史上极著名的灵魂归来事件(1) 女孩死了12年还阳</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/15/n14250628.md#1">元神离体入冥府  预知前程果然灵验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/29/n14236923.md#1">【未解之谜】真实版“与神同行” 阴阳师奇遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/20/n14119920.md#1">【未解之谜】冥府见闻 真实存在的生死簿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/4/n14087653.md#1">这人做了坏事 为何四世后才遭到报应？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/4/n14027952.md#1">感觉往生的亲人就在身边？ 专家：正常现象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/13/n13758099.md#1">【未解之谜】通行灵界的科学家之三：地狱之门的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/13/n13229320.md#1">天梯的寓意</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/7/n10835148.md#1" target="_blank">中华传统文化之叹——消逝的城墙（上）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/26/n11140380.md#1" target="_blank">【征文】刘晓：传统文化中对修炼人的敬重</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14193562.md#1">身上覆满白雪 印度修行者山区打坐画面惊人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194278.md#1">【未解之谜】帕克2024最新预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189240.md#1">【古道人生】曾遭亲戚白眼相看的他 因何成巨富？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/28/n14191119.md#1">唐代名相道士懂针术 医生能入冥施针</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/1/n14192196.md#1">【未解之谜】1967年猎鹰湖事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/7/n14196847.md#1">【晚间新闻】拜登争黑利选民 川普喊话辩论单挑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/7/n14197085.md#1">【菁英论坛】美中脱钩大时代 有人在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/2/n13547638.md#1">【传统音乐】传统文化与音乐 第二集</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/1/n14192679.md#1">中国经济为何比想像的还糟糕？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/6/n14196049.md#1">知情人：武汉首波疫情死亡数十万 尸体被切碎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/6/n14195777.md#1">两会主席台观察 李强与多名高官互动细节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/5/n14195614.md#1">迪丽热巴蹲姿造型爆红 医生警告别跟风模仿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/5/n14195486.md#1">暌违6年重返戏剧圈 杜汶泽宣布出演首部台剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/7/n14197224.md#1">《周处除三害》大陆热映 阮经天道具手表爆红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/6/n14196348.md#1">泰勒丝疑似身体不适 新加坡开唱咳嗽画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/7/n14196783.md#1">因身体不适 张学友取消3场上海演唱会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：9合1多功能电压力锅 6折限时优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/16/n14182510.md#1">9种营养素预防痴呆症 阻断大脑老化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/7/n14196745.md#1">这7种食物会让人睡不好 你可能不知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179135.md#1">土豆是天赐补脾良药 还减肥调血糖 2吃法最佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/6/n14195983.md#1">研究：开卷有益 每天阅读6分钟可纾解压力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282167.md#1">【十字路口】“九龙城寨”透玄机 点破中共下场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261321.md#1">【晚间新闻】涉共谍案 挪威男从中国返回时被捕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282416.md#1">【秦鹏观察】三大新闻事件背后 藏中共外交密码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278998.md#1">分析：台商撤离冲击中国经济 也令中共尴尬</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280888.md#1">沈舟：中共海军急缺战列舰 但从未造过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282080.md#1">《鬼灭之刃 柱训练篇》影评：高强度训练 为大战做热身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281728.md#1">被问赵又廷私下如何叫她 高圆圆回答笑翻全场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280722.md#1">空服员希望乘客在飞机上别做这件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281392.md#1">14天旅游只需带一个背包 打包行李8秘诀</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/3/8/n14197360.htm">【未解之谜】来自平行世界的她</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/3/8/n14197360.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/3/8/n14197360.htm">【未解之谜】来自平行世界的她</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/3/8/n14197360.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
